[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://core/SideBar-Client/SideBar.gd" type="Script" id=2]
[ext_resource path="res://Assets/MapCalendarImage.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/SliderBackGround.png" type="Texture" id=5]
[ext_resource path="res://Futura Std Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://gameobjects/Buttons/CloseButton.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 1 )

[node name="SideBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 142.361, 169.065 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventTile" type="Label" parent="."]
anchor_left = 0.497
anchor_right = 0.497
margin_left = -62.6222
margin_top = 209.887
margin_right = 229.378
margin_bottom = 280.887
rect_scale = Vector2( 0.364899, 0.364899 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.937255, 0.509804, 0.0392157, 1 )
text = "Event Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Location_H" type="Label" parent="."]
margin_left = 13.1358
margin_top = 254.792
margin_right = 247.136
margin_bottom = 325.792
rect_scale = Vector2( 0.280025, 0.280025 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.509804, 0.0392157, 1 )
text = "location"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date_H" type="Label" parent="."]
margin_left = 12.8635
margin_top = 329.309
margin_right = 141.864
margin_bottom = 400.309
rect_scale = Vector2( 0.285283, 0.285283 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.509804, 0.0392157, 1 )
text = "date"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desription_H" type="Label" parent="."]
margin_left = 15.6568
margin_top = 394.378
margin_right = 338.657
margin_bottom = 465.378
rect_scale = Vector2( 0.300033, 0.300033 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.937255, 0.509804, 0.0392157, 1 )
text = "description"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Location" type="Label" parent="."]
margin_left = 28.3017
margin_top = 280.397
margin_right = 1279.3
margin_bottom = 540.397
rect_scale = Vector2( 0.221769, 0.210842 )
custom_fonts/font = SubResource( 3 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Date" type="Label" parent="."]
margin_left = 26.2091
margin_top = 356.875
margin_right = 949.209
margin_bottom = 439.875
rect_scale = Vector2( 0.240626, 0.237612 )
custom_fonts/font = SubResource( 4 )
text = "Jun 13, 2020, 12:30"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = 28.0
margin_top = 424.0
margin_right = 1235.0
margin_bottom = 740.0
rect_scale = Vector2( 0.223215, 0.223215 )
custom_fonts/font = SubResource( 4 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventImage" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -146.5
margin_top = 38.0
margin_right = 146.5
margin_bottom = 208.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="." instance=ExtResource( 7 )]
margin_left = 18.0879
margin_top = 11.6954
margin_right = 2906.09
margin_bottom = 2899.7
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_button_down"]
